Kapitulli 6 added Ushtrime

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Java Ushtrime/nbproject/private/
 /Java Ushtrime/build/
 /Java Ushtrime/dist/
+/BrickBracker/nbproject/private/
+/BrickBracker/build/
